--- a/custom_components/dobiss/languages/en.json
+++ b/custom_components/dobiss/languages/en.json
@@ -1,9 +1,27 @@
 {
-    "title": "Dobiss Domotics",
     "config": {
+        "flow_title": "Discovered Dobiss LAN controller at {host}:{port}",
         "step": {
             "user": {
-                "title": "Dobiss Domotics",
+                "description": "Enter the host and port of the Dobiss LAN controller.",
+                "data": {
+                    "host": "The host IP address",
+                    "port": "The port to connect to"
+                }
+            }
+        },
+        "error": {
+            "invalid_host": "We cannot connect to the host"
+        },
+        "abort": {
+            "cannot_connect": "Unable to connect to the LAN controller",
+            "already_configured": "This host is already configured"
+        }
+    },
+    "options": {
+        "flow_title": "Setup Dobiss LAN controller",
+        "step": {
+            "user": {
                 "description": "Enter the host and port of the Dobiss LAN controller.",
                 "data": {
                     "host": "The host IP address",
